# vk-data-extractor

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: cli.md  dataclasses.md  enumerates.md  vk-core.md
src/vextractor/: __init__.py  exceptions.py  utils.py
src/vextractor/console/: config.py  core.py
src/vextractor/console/cmds/: album.py  birthdays.py  me.py  user.py
src/vextractor/vk/: core.py  dataclasses.py  enumerates.py
tests/: conftest.py
tests/unit/: test_last_seen.py  test_platform.py
