### ******************** >POETRY ********************
[tool.poetry]
name = "Vextractor"
version = "0.1.0"
description = "Quick and handy extractor of user data from VKontakte (vk.com)"
authors = ["IsFilimonov <https://github.com/isfilimonov>"]
repository = "https://github.com/IsFilimonov/vextractor"
homepage = "https://github.com/IsFilimonov/vextractor"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
vk-api = "^11.9.9"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pip-licenses = "^4.0.3"
debugpy = "^1.6.5"
pre-commit = "^2.21.0"

[tool.poetry.group.typing.dependencies]
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^9.0.2"
mkdocs-material-extensions = "^1.1.1"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-img2fig-plugin = "^0.9.3"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-exclude = "^1.0.2"
pydocstyle = "^6.2.3"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
vextract = "vextractor.console.core:start"

### ******************** POETRY> ********************

### ******************** >OTHER ********************
[tool.isort]
line_length = 95
profile = "black"
remove_redundant_aliases = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "skip"
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

[tool.pytest.ini_options]
pythonpath = ["src"]
### ******************** OTHER> ********************

### ******************** >BUILD ********************
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
